--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Neat &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Angela Carolina Pulido Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
+	<meta name="description" content="Angela Pulido Portfolio" />
+	<meta name="keywords" content="Angela Carolina Pulido, diseñadora, Ux design, ui design, designer" />
+	<meta name="author" content="angelacarolinapulido.com" />
+
 
 	<!-- 
 	//////////////////////////////////////////////////////
@@ -37,6 +38,18 @@
 	<link href="https://fonts.googleapis.com/css?family=Oxygen:300,400" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
 	
+	<!-- Embed Behance Styles -->
+	<link rel="stylesheet" type="text/css" media="all" href="css/embed.behance.css"/>
+
+	<!-- jQuery lib -->
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+	<!-- jQuery Easing lib (optional) -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
+
+	<!-- Embed Behance Javascript -->
+	<script type="text/javascript" src="js/embed.behance2.js"></script>	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -59,35 +72,26 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
-	</head>
-	<body>
-		
-	<div class="fh5co-loader"></div>
+</head>
+<body>
 	
+<!-- Barra navegación -->
+<div class="fh5co-loader"></div>
 	<div id="page">
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container-wrap">
 			<div class="top-menu">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html">Neat</a></div>
+					<div id="fh5co-logo"><a href="index.html" class="logo">Angela.Carolina</a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="work.html">Work</a></li>
-							<li class="has-dropdown active">
-								<a href="blog.html">Blog</a>
-								<ul class="dropdown">
-									<li><a href="#">Web Design</a></li>
-									<li><a href="#">eCommerce</a></li>
-									<li><a href="#">Branding</a></li>
-									<li><a href="#">API</a></li>
-								</ul>
-							</li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li class="active"><a href="index.html">Inicio</a></li>
+							<li><a href="work.html">Portafolio</a></li>
+							<li><a href="https://medium.com/@angelapulido.design" target="_blank">Blog</a></li>
+							<li><a href="about.html">Acerca de</a></li>
+							<li><a href="contact.html">Contacto</a></li>
 						</ul>
 					</div>
 				</div>
@@ -95,159 +99,168 @@
 			</div>
 		</div>
 	</nav>
+<!-- Barra navegación -->
+
+
 	<div class="container-wrap">
-		<aside id="fh5co-hero">
+		
+		<aside id="fh5co-hero"><!-- slider -->
 			<div class="flexslider">
 				<ul class="slides">
-			   	<li style="background-image: url(images/img_bg_3.jpg);">
+			   	<li style="background-image: url(images/img_bg_1.jpg);">
 			   		<div class="overlay-gradient"></div>
-			   		<div class="container-fluids">
+			   		<div class="container-fluid">
 			   			<div class="row">
-				   			<div class="col-md-6 col-md-offset-3 slider-text slider-text-bg">
-				   				<div class="slider-text-inner text-center">
-				   					<h1>Blog</h1>
-										<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+				   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 slider-text">
+				   				<div class="slider-text-inner">
+				   					<h1>Hola soy Angela Carolina Pulido</h1>
+										<h2>Soy una diseñadora visual de Bogotá</a></h2>
+
+										<p>
+											<ul class="fh5co-social-icons">
+												<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter"></i></a></li>
+												<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank"><i class="icon-linkedin"></i></a></li>
+												<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble"></i></a></li>
+												<li><a href="https://www.behance.net/angelapuli6913" target="_blank"><i class="icon-behance"></i></a></li>
+											</ul>
+										</p>										
+										<p><a class="btn btn-primary btn-demo " href="contact.html"></i> Contáctame</a> </p>
 				   				</div>
+
 				   			</div>
 				   		</div>
 			   		</div>
-			   	</li>		   	
+			   	</li>	
 			  	</ul>
 		  	</div>
-		</aside>		
-		<div id="fh5co-blog">
+		</aside><!-- END Slider -->
+
+		<div id="fh5co-services"><!-- servicios -->
 			<div class="row">
-				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/blog-1.jpg);"></a>
-						<div class="blog-text">
-							<span class="posted_on">Feb. 15th 2016</span>
-							<h3><a href="#">Photoshoot On The Street</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="stuff">
-								<li><i class="icon-heart3"></i>249</li>
-								<li><i class="icon-eye2"></i>1,308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
-						</div> 
+				<div class="col-md-4 text-center animate-box">
+					<div class="services">
+						<span class="icon">
+							<i class="icon-diamond"></i>
+						</span>
+						<div class="desc">
+							<h3><a href="#">Identidad y Marca</a></h3>
+							<p>He trabajado en la creación y renovación de multiples marcas.</p>
+						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/blog-2.jpg);"></a>
-						<div class="blog-text">
-							<span class="posted_on">Feb. 15th 2016</span>
-							<h3><a href="#">Surfing at Philippines</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="stuff">
-								<li><i class="icon-heart3"></i>249</li>
-								<li><i class="icon-eye2"></i>1,308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
-						</div> 
+				<div class="col-md-4 text-center animate-box">
+					<div class="services">
+						<span class="icon">
+							<i class="icon-lab2"></i>
+						</span>
+						<div class="desc">
+							<h3><a href="#">Web Design &amp; UI</a></h3>
+							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/blog-3.jpg);"></a>
-						<div class="blog-text">
-							<span class="posted_on">Feb. 15th 2016</span>
-							<h3><a href="#">Focus On Uderwater</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="stuff">
-								<li><i class="icon-heart3"></i>249</li>
-								<li><i class="icon-eye2"></i>1,308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
-						</div> 
+				<div class="col-md-4 text-center animate-box">
+					<div class="services">
+						<span class="icon">
+							<i class="icon-settings"></i>
+						</span>
+						<div class="desc">
+							<h3><a href="#">Web Development</a></h3>
+							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/blog-1.jpg);"></a>
-						<div class="blog-text">
-							<span class="posted_on">Feb. 15th 2016</span>
-							<h3><a href="#">Photoshoot On The Street</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="stuff">
-								<li><i class="icon-heart3"></i>249</li>
-								<li><i class="icon-eye2"></i>1,308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
-						</div> 
-					</div>
+			</div>
+		</div><!-- END servicios -->
+
+		<div id="fh5co-work" class="fh5co-light-grey"> <!-- Trabajos -->
+			<div class="row animate-box">
+				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+					<h2>Últimos trabajos</h2>
+					<p>A continuación puedes ver algunos de mis últimos trabajos.</p>
 				</div>
-				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/blog-2.jpg);"></a>
-						<div class="blog-text">
-							<span class="posted_on">Feb. 15th 2016</span>
-							<h3><a href="#">Surfing at Philippines</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="stuff">
-								<li><i class="icon-heart3"></i>249</li>
-								<li><i class="icon-eye2"></i>1,308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
-						</div> 
+			</div>
+			<div >
+				<div class="fh5co-light-grey">
+					<div class="content container-fluid">	
+								<!-- THE BEHANCE PORTFOLIO WILL BE PRINTED IN HERE -->
+						<div class="behance-container"></div>	
+					</div>				
+				</div>	
+			</div>
+			<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+					<p><a class="btn btn-primary btn-demo " href="work.html"></i>Ver más</a> </p>
+			</div>
+		</div>
+
+
+		<div id="fh5co-counter" class="fh5co-counters">
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3 text-center animate-box">
+					<p>We have a fun facts far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/blog-3.jpg);"></a>
-						<div class="blog-text">
-							<span class="posted_on">Feb. 15th 2016</span>
-							<h3><a href="#">Focus On Uderwater</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="stuff">
-								<li><i class="icon-heart3"></i>249</li>
-								<li><i class="icon-eye2"></i>1,308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
-						</div> 
+			</div>
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2">
+					<div class="row">
+						<div class="col-md-3 text-center">
+							<span class="fh5co-counter js-counter" data-from="0" data-to="3452" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter-label">Cups of Coffee</span>
+						</div>
+						<div class="col-md-3 text-center">
+							<span class="fh5co-counter js-counter" data-from="0" data-to="234" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter-label">Client</span>
+						</div>
+						<div class="col-md-3 text-center">
+							<span class="fh5co-counter js-counter" data-from="0" data-to="6542" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter-label">Projects</span>
+						</div>
+						<div class="col-md-3 text-center">
+							<span class="fh5co-counter js-counter" data-from="0" data-to="8687" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter-label">Done Projects</span>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div><!-- END container-wrap -->
 
+
+
+		
+	</div>
+</div>
+
+<!-- footer -->
 	<div class="container-wrap">
 		<footer id="fh5co-footer" role="contentinfo">
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
-					<h4>About Neat</h4>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					<h4>Acerca de mi</h4>
+					<p>Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos a continuación.</p>
 				</div>
-				<div class="col-md-3 col-md-push-1">
-					<h4>Latest Posts</h4>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Amazing Templates</a></li>
-						<li><a href="#">100+ Free Download Templates</a></li>
-						<li><a href="#">Neat is now available</a></li>
-						<li><a href="#">Download 1000+ icons</a></li>
-						<li><a href="#">Big Deal for this month of March, Join Us here</a></li>
-					</ul>
-				</div>
+
 
 				<div class="col-md-3 col-md-push-1">
 					<h4>Links</h4>
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Work</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">About us</a></li>
+							<li><a href="index.html">Inicio</a></li>
+							<li><a href="work.html">Portafolio</a></li>
+							<li><a href="https://medium.com/@angelapulido.design" target="_blank">Blog</a></li>
+							<li><a href="about.html">Acerca de</a></li>
+							<li><a href="contact.html">Contacto</a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-3">
-					<h4>Contact Information</h4>
+					<h4>Información de contacto</h4>
+					
 					<ul class="fh5co-footer-links">
-						<li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-						<li><a href="tel://1234567920">+ 1235 2355 98</a></li>
-						<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-						<li><a href="http://gettemplates.co">gettemplates.co</a></li>
+						<li><i class="icon-location4"></i> Vivo en Bogotá</li>
+						<li><i class="icon-phone3"></i> +57 3044188392</li>
+						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co"> hola@angelacarolinapulido.com</a></li>
+						<li><i class="icon-globe2"></i><a href="www.angelacarolinapulido.com"> www.angelacarolinapulido.com</a></li>
 					</ul>
+					
 				</div>
 
 			</div>
@@ -255,29 +268,27 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2017 Angela Carolina Pulido Patiño. All Rights Reserved.</small> 
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank"><i class="icon-linkedin"></i></a></li>
+							<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble"></i></a></li>
+							<li><a href="https://www.behance.net/angelapuli6913" target="_blank"><i class="icon-behance"></i></a></li>
 						</ul>
 					</p>
 				</div>
 			</div>
 		</footer>
-	</div><!-- END container-wrap -->
+	</div><!-- END Footer -->
 	</div>
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
 	</div>
 	
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
+	
 	<!-- jQuery Easing -->
 	<script src="js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
@@ -293,6 +304,27 @@
 	<script src="js/jquery.countTo.js"></script>
 	<!-- Main -->
 	<script src="js/main-original.js"></script>
+
+<!-- Scrip Behance -->
+	<script>
+			$(document).ready(function(){
+
+				 $('.behance-container').embedBehance({
+
+				 	// behance API Key
+					apiKey: 'aQLZR3v9Ft6LRUhb1vKBNAzr2roPvVgm',
+
+					// Behance Username
+					userName: 'angelapuli6913',infiniteScrolling: true,
+				});
+			});
+	</script>
+
+
+
+
+	</body>
+
 	</body>
 </html>
 
