--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	
 <!-- Barra navegación -->
 <div class="fh5co-loader"></div>
-	<div id="page">
+	<span itemscope itemtype="http://schema.org/LocalBusiness"><div id="page">
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container-wrap">
 			<div class="top-menu">
@@ -88,11 +88,11 @@
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
-							<li class="active"><a href="index.html">Inicio</a></li>
-							<li><a href="work.html">Portafolio</a></li>
-							<li><a href="https://medium.com/@angelapulido.design" target="_blank">Blog</a></li>
-							<li><a href="about.html">Acerca de</a></li>
-							<li><a href="contact.html">Contacto</a></li>
+							<li class="active"><a href="index.html " itemprop="url">Inicio</a></li>
+							<li><a href="work.html" itemprop="url">Portafolio</a></li>
+							<li><a href="https://medium.com/@angelapulido.design" itemprop="url" target="_blank">Blog</a></li>
+							<li><a href="about.html" itemprop="url">Acerca de</a></li>
+							<li><a href="contact.html" itemprop="url">Contacto</a></li>
 						</ul>
 					</div>
 				</div>
@@ -114,18 +114,18 @@
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 slider-text">
 				   				<div class="slider-text-inner">
-				   					<h1>Hola soy Angela Carolina Pulido</h1>
-										<h2>Soy una diseñadora visual de Bogotá</a></h2>
+				   					<h1>Hola soy <span itemprop="name"> Angela Carolina Pulido</span></h1>
+										<h2 itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">Soy una diseñadora visual de <span itemprop="addressLocality">Bogotá</span></h2>
 
 										<p>
 											<ul class="fh5co-social-icons">
-												<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter"></i></a></li>
-												<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank"><i class="icon-linkedin"></i></a></li>
-												<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble"></i></a></li>
-												<li><a href="https://www.behance.net/angelapuli6913" target="_blank"><i class="icon-behance"></i></a></li>
+												<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter" itemprop="url"></i></a></li>
+												<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank" itemprop="url"><i class="icon-linkedin"></i></a></li>
+												<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble" itemprop="url"></i></a></li>
+												<li><a href="https://www.behance.net/angelapuli6913" target="_blank"><i class="icon-behance" itemprop="url"></i></a></li>
 											</ul>
 										</p>										
-										<p><a class="btn btn-primary btn-demo " href="contact.html"></i> Contáctame</a> </p>
+										<p><a class="btn btn-primary btn-demo " href="contact.html" itemprop="url"></i> Contáctame</a> </p>
 				   				</div>
 
 				   			</div>
@@ -278,8 +278,8 @@
 					
 					<ul class="fh5co-footer-links">
 						<li><i class="icon-location4"></i> Vivo en Bogotá</li>
-						<li><i class="icon-phone3"></i> +57 3044188392</li>
-						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co"> hola@angelacarolinapulido.com</a></li>
+						<li><i class="icon-phone3" itemprop="telephone"></i> +57 3044188392</li>
+						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co"><span itemprop="email"> hola@angelacarolinapulido.com</span></a></li>
 						<li><i class="icon-globe2"></i><a href="www.angelacarolinapulido.com"> www.angelacarolinapulido.com</a></li>
 					</ul>
 					
@@ -303,7 +303,8 @@
 				</div>
 			</div>
 		</footer>
-	</div><!-- END Footer -->
+	</div>
+	</span><!-- END Footer -->
 	</div>
 
 	<div class="gototop js-top">
