--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-<!-- Marcado de microdatos añadido por el Asistente para el marcado de datos estructurados de Google. -->
 <html>
 	<head>
 	<meta charset="utf-8">
@@ -70,7 +69,7 @@
 		
 	<div class="fh5co-loader"></div>
 	
-	<span itemscope itemtype="http://schema.org/LocalBusiness" class="contact-info"> <div id="page">
+	<div id="page">
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container-wrap">
 			<div class="top-menu">
@@ -115,7 +114,7 @@
 		<div id="fh5co-contact">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h1>ESCRÍBEME</h1>
+					<h1>ESCRIBEME</h1>
 					<p>¿Estás interesado en contactarme? O quieres decirme hola, envíame un correo a <a href="mailto:hola@angelacarolinapulido.com">hola@angela.design.com</a> o puedes usar el formulario de contacto que aparece aquí abajo, también puedes escribirme por las redes sociales. ¡Espero tu mensaje!</p>
 				</div>
 			</div>
@@ -123,9 +122,9 @@
 				<div class="col-md-3 col-md-push-1 animate-box">
 					<h3>Mis datos</h3>
 					<ul class="contact-info">
-						<li  itemprop="address" itemscope itemtype="http://schema.org/PostalAddress" itemref="_addressCountry5"><i class="icon-location4"></i>Vivo en <span itemprop="addressLocality">Bogotá</span></li>
-						<li itemprop="telephone"><i class="icon-phone3"></i>+57 3044188392</li>
-						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co"> <span itemprop="email">hola@angelacarolinapulido.com</span></a></li>
+						<li><i class="icon-location4"></i>Vivo en Bogotá</li>
+						<li><i class="icon-phone3"></i>+57 3044188392</li>
+						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co">hola@angelacarolinapulido.com</a></li>
 						<li><i class="icon-globe2"></i><a href="www.angelacarolinapulido.com">www.angelacarolinapulido.com</a></li>
 					</ul>
 				</div>
@@ -168,10 +167,7 @@
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
 					<h4>Acerca de mi</h4>
-					<p>Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - <span id="_addressCountry5" itemprop="addressCountry">Colombia. Puedes mirar mis últimos trabajos en mi portafolio.</p>
-
-
-					<p>Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - <span id="_addressCountry5" itemprop="addressCountry">Colombia. Puedes mirar mis últimos trabajos en mi portafolio.</p>
+					<p>Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos en mi portafolio.</p>
 				</div>
 
 
@@ -240,7 +236,7 @@
 	<script src="js/jquery.countTo.js"></script>
 	<!-- Main -->
 	<script src="js/main-original.js"></script>
-	</span>
+
 	</body>
 </html>
 
