--- a/contact.html
+++ b/contact.html
@@ -138,9 +138,11 @@
 					</ul>
 				</div>
 				<div class="col-md-7 col-md-push-1 animate-box">
-
+ 
+ <!-- Formulario -->
 				<div class="row">
-					<form method="POST" action="http://formspree.io/hola@angelacarolinapulido.com">
+					<form action="http://formspree.io/hola@angelacarolinapulido.com" method="POST" />
+					<!-- <form method="POST" action="http://formspree.io/hola@angelacarolinapulido.com"> -->
 							<div class="col-md-6">
 								<div class="form-group">
 									<input type="text" name="name" class="form-control" placeholder="Nombre">
@@ -167,7 +169,9 @@
 				</div>
 			</div>
 		</div>
-	</div><!-- END container-wrap -->
+	</div>
+<!-- /Formulario -->
+<!-- END container-wrap -->
 
 
 <!-- footer -->
