--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 	</head>
 	<body>
 
-		<header> hola mundo2</header>
+		<header> hola mundo3</header>
 
 	<div class="fh5co-loader"></div>
 	
@@ -143,7 +143,7 @@
  
  <!-- Formulario -->
 				<div class="row">
-					<form action="https://formspree.io/<hola@angelacarolinapulido.com>" method="POST" />
+					<form action="https://formspree.io/hola@angelacarolinapulido.com" method="POST" />
 
 					<!-- <form method="POST" action="http://formspree.io/hola@angelacarolinapulido.com"> -->
 							<div class="col-md-6">
